# rustq

./: Cargo.toml  README.md  compose.yaml
examples/: basic_usage.rs  image_download.rs
src/: error.rs  job.rs  lib.rs  queue_client.rs  queue_wrapper.rs
src/queue/: mod.rs  rabbitmq.rs  traits.rs
src/storage/: mod.rs  redis.rs  traits.rs
src/worker/: concurrent_worker.rs  mod.rs  worker.rs
