[package]
name = "rustq"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
deadpool-redis = "0.22.0"
dotenvy = "0.15.7"
futures = "0.3.31"
futures-util = "0.3.31"
lapin = "3.7.1"
log = "0.4.28"
redis = { version = "0.32.7", features = ["tokio-comp"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
time = "0.3.44"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
uuid = { version = "1.18.1", features = ["v4"] }
